fix social media link align

--- a/src/app/components/Footer.css
+++ b/src/app/components/Footer.css
@@ -17,6 +17,7 @@
 
 .social-media {
     gap: 1rem;
+    align-items: center;
 }
 
 .contact-info {
